# m2-opengl

./: .envrc  .gitignore  .gitmodules  Cargo.toml  README.md
assets/: __saved_transform_hierarchy.scene  cerberus.scene  demo.scene  from_gltf.scene  test with meshes.scene  unknown.scene
assets/gltf/: .gitignore
assets/materials/: cerberus.toml  earth.toml  moon.toml  square_floor.toml  suzanne.toml  white_diffuse.toml  white_shiny.toml
assets/models/: cerberus.mtl  eagle.mtl  suzanne.mtl
assets/objects/: cerberus.toml  moon.toml  suzanne.toml
assets/scenes/: suzanne.toml
assets/shaders/: blur_downsample.frag.glsl  blur_upsample.frag.glsl  defferred.frag.glsl  mesh.frag.glsl  mesh.vert.glsl  noop.vert.glsl  postprocess.frag.glsl  simple_sky_bg.frag.glsl  simple_sky_illuminate.frag.glsl  ui.frag.glsl  ui.vert.glsl
assets/shaders/env/: equirectangular.bg.glsl  equirectangular.glsl  equirectangular.illum.glsl  simple_sky.glsl
assets/shaders_old/: color.frag.glsl  mesh.frag.glsl  mesh.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
assets/shaders_old/screen/: defferred.glsl
assets/textures/: .gitignore
lib/asset-server/: Cargo.toml
lib/asset-server/src/: lib.rs
lib/glsl-preprocessor/: Cargo.toml
lib/glsl-preprocessor/src/: lib.rs
lib/glsl-preprocessor/tests/: main.rs
lib/glsl-preprocessor/tests/fixtures/: common.glsl  shader.glsl
lib/glsl-preprocessor/tests/snapshots/: main__process_file.snap
lib/input/: Cargo.toml
lib/input/src/: lib.rs
lib/pan-orbit-camera/: Cargo.toml
lib/pan-orbit-camera/src/: lib.rs
lib/rose/: Cargo.toml
lib/rose-core/: Cargo.toml
lib/rose-core/src/: camera.rs  gbuffers.rs  lib.rs  light.rs  material.rs  mesh.rs  postprocess.rs  screen.vert.glsl  screen_draw.rs  transform.rs
lib/rose-core/src/utils/: mod.rs  reload_watcher.rs  thread_guard.rs
lib/rose-ecs/: Cargo.toml
lib/rose-ecs/src/: components.rs  lib.rs  load_gltf.rs  prelude.rs  scene.rs
lib/rose-ecs/src/assets/: material.rs  mod.rs  object.rs  scene.rs
lib/rose-ecs/src/assets/fixtures/: scene_example.toml
lib/rose-ecs/src/assets/mesh/: mod.rs  obj.rs
lib/rose-ecs/src/systems/: camera.rs  hierarchy.rs  input.rs  mod.rs  persistence.rs  render.rs  ui.rs
lib/rose-platform/: Cargo.toml
lib/rose-platform/src/: circbuffer.rs  lib.rs  prelude.rs  tracing_hook.rs
lib/rose-renderer/: Cargo.toml
lib/rose-renderer/src/: bones.rs  env.rs  gbuffers.rs  lib.rs  material.rs  prelude.rs  ssao.rs
lib/rose-renderer/src/postprocess/: autoexposure.rs  blur.rs  mod.rs
lib/rose-ui/: Cargo.toml
lib/rose-ui/src/: lib.rs  painter.rs
lib/rose/src/: lib.rs
lib/tests/: Cargo.toml
lib/tests/integration/: main.rs
lib/tests/integration/tests/: mod.rs
lib/tests/integration/tests/violette/: textures.rs
lib/tests/src/: lib.rs
lib/violette-api/: Cargo.toml
lib/violette-api/src/: api.rs  base.rs  bind.rs  buffer.rs  context.rs  framebuffer.rs  lib.rs  math.rs  shader.rs  texture.rs  value.rs  vao.rs  window.rs
lib/violette-derive/: Cargo.toml
lib/violette-derive/src/: lib.rs
lib/violette-derive/tests/: works.rs
lib/violette-gl/: Cargo.toml
lib/violette-gl/examples/: triangle.rs
lib/violette-gl/gl/: build.rs
lib/violette-gl/src/: api.rs  arrays.rs  buffer.rs  context.rs  debug.rs  framebuffer.rs  lib.rs  program.rs  texture.rs  thread_guard.rs  window.rs
lib/violette-input/: Cargo.toml
lib/violette-input/src/: lib.rs
res/shaders/: blit.glsl
res/shaders/common/: color.glsl  math.glsl  pbr.glsl  random.glsl
res/shaders/common/uniforms/: bone.glsl  light.glsl  view.glsl
res/shaders/mesh/: mesh.frag.glsl  mesh.vert.glsl
res/shaders/screen/: deferred.glsl  luminance-estimate.glsl  postprocess.glsl  ssao.glsl
res/shaders/screen/blur/: downsample.glsl  upsample.glsl
res/shaders/screen/env/: equirectangular.glsl  irradiance.glsl  simple_sky.glsl  specular_ibl.glsl
res/shaders/sky/: atmosphere.frag.glsl
res/shaders/ui/: ui.frag.glsl
src/: camera.rs  gbuffers.rs  lib.rs  light.rs  material.rs  mesh.rs  postprocess.rs  screen_draw.rs  transform.rs  ui.rs
src/ui/: painter.rs
