[workspace]
members = ["bin/*", "lib/*"]
default-members = ["lib/violette", "lib/rose-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nathan Graule <nathan.graule@univ-tlse3.fr>"]
homepage = "https://github.com/SolarLiner/m2-opengl"

[workspace.dependencies]
bytemuck = { version = "1.7.3", features = ["derive"] }
crevice = { version = "0.12.0", features = ["glam"] }
egui = { version = "0.20.1", features = ["bytemuck"] }
eyre = "0.6.8"
glam = { version = "0.22.0", features = ["bytemuck", "rand", "num-traits", "glam-assert"] }
tracing = "0.1.33"
winit = "0.27.5"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
debug = true
strip = false

[profile.release-stripped]
inherits = "release"
debug = false
strip = true
lto = "full"