[package]
name = "rose-core"
version.workspace = true
authors.workspace = true
homepage.workspace = true
default-run = "uv_sphere"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.9.1"
bevy_ecs = "0.9.1"
bytemuck = { version = "1.7.3", features = ["derive"] }
crevice = { version = "0.12.0", features = ["glam"] }
float-ord = "0.3.2"
glutin = "0.30.3"
glutin-winit = "0.2.1"
image = "0.24.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = "0.8.5"
raw-window-handle = "0.5.0"
tracing = "0.1.33"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
tracing-tracy = "0.10.2"
once_cell = "1.17.0"
violette = { path = "../violette", features = [
    "uniforms-glam",
    "vertex-glam",
] }
either = "1.8.1"
color-eyre = "0.6.2"

eyre = { workspace = true }
glam = { workspace = true }
