[package]
name = "rose-core"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crevice = { version = "0.12.0", features = ["glam"] }
float-ord = "0.3.2"
image = "0.24.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
rand = "0.8.5"
once_cell = "1.17.0"
either = "1.8.1"

violette = { path = "../violette", features = [
    "uniforms-glam",
    "vertex-glam",
] }
violette-derive = { path = "../violette-derive" }

bytemuck.workspace = true
eyre.workspace = true
glam.workspace = true
tracing.workspace = true