[package]
name = "rose-ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets_manager = { version = "0.9.7", features = ["embedded", "image", "jpeg", "png", "toml", "hot-reloading"] }
crossbeam-channel = "0.5.7"
dashmap = "5.4.0"
egui = "0.20.1"
hecs = { version = "0.9.1", features = ["serde", "row-serialize", "macros"] }
image = "0.24.5"
obj-rs = "0.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
toml = "0.7.2"

input = { path = "../input" }
rose-core = { path = "../rose-core", features = ["serialize"] }
rose-renderer = { path = "../rose-renderer" }
rose-platform = { path = "../rose-platform" }
violette = { path = "../violette" }

eyre.workspace = true
glam = { workspace = true, features = ["serde"] }
tracing.workspace = true

[features]
ui = ["rose-renderer/debug-ui"]