[package]
name = "rose-ecs"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets_manager = { version = "0.9.7", features = ["embedded", "image", "jpeg", "png", "toml", "hot-reloading"] }
crossbeam-channel = "0.5.7"
dashmap = "5.4.0"
egui = "0.20.1"
gltf = "1.1.0"
hecs = { version = "0.9.1", features = ["serde", "row-serialize", "macros"] }
image = "0.24.5"
obj-rs = "0.7.0"
rayon = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
smol = "1.3.0"

input = { path = "../input" }
rose-core = { path = "../rose-core", features = ["serialize"] }
rose-renderer = { path = "../rose-renderer" }
rose-platform = { path = "../rose-platform" }
violette = { path = "../violette" }

bytemuck.workspace = true
eyre.workspace = true
glam = { workspace = true, features = ["serde"] }
tracing.workspace = true

[dev-dependencies]
toml = "0.7.3"

[features]
ui = ["rose-renderer/debug-ui"]