[package]
name = "rose-platform"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
egui = { version = "0.20.1", optional = true, features = ["bytemuck"] }
glutin = "0.30.3"
glutin-winit = "0.2.1"
histo = "1.0.0"
once_cell = "1.17.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
tracing-tracy = { version = "0.10.2", optional = true }
raw-window-handle = "0.5.0"

rose-core = { path = "../rose-core" }
rose-ui = { path = "../rose-ui", optional = true }
violette = { path = "../violette" }

eyre.workspace = true
glam.workspace = true
winit.workspace = true
tracing.workspace = true

[features]
tracy = ["tracing-tracy"]
ui = ["egui", "rose-ui"]