[package]
name = "rose-renderer"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
either = "1.8.1"
float-ord = "0.3.2"
image = "0.24.5"
violette = { path = "../violette" }
violette-derive = { path = "../violette-derive" }
rose-core = { path = "../rose-core" }
rose-ui = { path = "../rose-ui", optional = true }

bytemuck.workspace = true
crevice.workspace = true
egui = { workspace = true, optional = true }
eyre.workspace = true
glam.workspace = true
tracing.workspace = true

[features]
debug-ui = ["egui", "rose-ui"]
hot-reload = ["rose-core/hot-reload"]
