[package]
name = "rose-ui"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
violette = { path = "../violette" }
violette-derive = { path = "../violette-derive" }
rose-core = { path = "../rose-core" }

bytemuck.workspace = true
egui.workspace = true
egui-winit.workspace = true
glam = { workspace = true, features = ["bytemuck", "rand", "num-traits"] }
tracing.workspace = true
winit.workspace = true