[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
image = "0.24.5"
rose-core = { path = "../rose-core" }
rose-platform = { path = "../rose-platform" }
violette = { path = "../violette", features = ["img"] }
inventory = "0.3.3"

eyre.workspace = true

[[test]]
name = "integration"
path = "integration/main.rs"
harness = false