[package]
name = "violette-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
bytemuck = "1.13.0"
duplicate = "0.4.1"
nalgebra-glm = { version = "0.18.0", features = ["convert-bytemuck", "serde-serialize", "convert-glam018"] }
num-traits = "0.2.15"
crevice = "0.12.0"
raw-window-handle = "0.5.0"

violette-input = { path = "../violette-input" }