[package]
name = "violette-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.14.3"
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "1.0.107"

[dev-dependencies]
bytemuck = "1.13.1"
violette = { path = "../violette" }