[package]
name = "violette-gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
raw-window-handle = "0.5.0"
raw-window-handle-extensions = "0.5.3"
glutin = "0.30.6"
winit = "0.28.1"
glutin-winit = "0.3.0"
crevice = "0.12.0"
thiserror = "1.0.38"
num-derive = "0.3.3"
num-traits = "0.2.15"
gl = "0.14.0"
once_cell = "1.17.1"
tracing = "0.1.37"

violette = { path = "../violette" }