[package]
name = "violette-gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_float = "0.1.0"
bytemuck = { version = "1.13.0" }
crevice = { version = "0.12.0", features = ["cgmath"] }
crossbeam-channel = "0.5.6"
duplicate = "0.4.1"
dashmap = "5.4.0"
glutin = "0.30.6"
glutin-winit = "0.3.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.17.1"
raw-window-handle = "0.5.0"
raw-window-handle-extensions = "0.5.3"
thiserror = "1.0.38"
tracing = "0.1.37"
winit = "0.28.1"

gl = { path = "./gl" }
violette-api = { path = "../violette-api" }
violette-input = { path = "../violette-input" }

[dev-dependencies]
eyre = "0.6.8"
color-eyre = "0.6.2"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }